--- a/VIDEVOX/src/main/java/nz/ac/auckland/view/RootLayout.fxml
+++ b/VIDEVOX/src/main/java/nz/ac/auckland/view/RootLayout.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.view.RootLayoutController">
 	<top>
 		<MenuBar>
 			<menus>
