--- a/VIDEVOX/src/main/java/nz/ac/auckland/view/PlayerView.fxml
+++ b/VIDEVOX/src/main/java/nz/ac/auckland/view/PlayerView.fxml
@@ -14,17 +14,23 @@
          <children>
             <SplitPane dividerPositions="0.5" VBox.vgrow="ALWAYS">
               <items>
-                  <VBox minWidth="500.0">
+                  <HBox>
                      <children>
-                        <Region VBox.vgrow="ALWAYS" />
-                        <HBox>
+                        <Region minWidth="10.0" style="-fx-background-color: black;" HBox.hgrow="NEVER" />
+                        <VBox minWidth="500.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <MediaView fx:id="_mainPlayerView" fitHeight="200.0" fitWidth="500.0" HBox.hgrow="ALWAYS" />
+                              <Region style="-fx-background-color: black;" VBox.vgrow="ALWAYS" />
+                              <HBox>
+                                 <children>
+                                    <MediaView fx:id="_mainPlayerView" fitHeight="200.0" fitWidth="500.0" HBox.hgrow="ALWAYS" />
+                                 </children>
+                              </HBox>
+                              <Region style="-fx-background-color: black;" VBox.vgrow="ALWAYS" />
                            </children>
-                        </HBox>
-                        <Region VBox.vgrow="ALWAYS" />
+                        </VBox>
+                        <Region minWidth="10.0" style="-fx-background-color: black;" HBox.hgrow="NEVER" />
                      </children>
-                  </VBox>
+                  </HBox>
                   <ScrollPane fitToHeight="true" fitToWidth="true" prefWidth="200.0">
                      <content>
                         <VBox fx:id="_scrollBox" />
