Fixed Play back buttons

--- a/VIDEVOX/src/main/java/nz/ac/auckland/view/PlayerView.fxml
+++ b/VIDEVOX/src/main/java/nz/ac/auckland/view/PlayerView.fxml
@@ -15,21 +15,17 @@
          <children>
             <SplitPane dividerPositions="0.5" VBox.vgrow="ALWAYS">
               <items>
-                  <HBox>
+                  <HBox fx:id="_videoContainer" style="-fx-background-color: black;">
                      <children>
-                        <Region minWidth="10.0" style="-fx-background-color: black;" HBox.hgrow="NEVER" />
-                        <VBox minWidth="500.0" HBox.hgrow="ALWAYS">
+                        <Region minWidth="10.0" HBox.hgrow="ALWAYS" />
+                        <VBox HBox.hgrow="ALWAYS">
                            <children>
-                              <Region style="-fx-background-color: black;" VBox.vgrow="ALWAYS" />
-                              <HBox style="-fx-background-color: black;">
-                                 <children>
-                                    <MediaView fx:id="_mainPlayerView" fitHeight="200.0" fitWidth="500.0" HBox.hgrow="ALWAYS" />
-                                 </children>
-                              </HBox>
-                              <Region style="-fx-background-color: black;" VBox.vgrow="ALWAYS" />
+                              <Region VBox.vgrow="ALWAYS" />
+                              <MediaView fx:id="_mainPlayerView" fitHeight="200.0" fitWidth="500.0" />
+                              <Region VBox.vgrow="ALWAYS" />
                            </children>
                         </VBox>
-                        <Region minWidth="10.0" style="-fx-background-color: black;" HBox.hgrow="NEVER" />
+                        <Region minWidth="10.0" HBox.hgrow="ALWAYS" />
                      </children>
                   </HBox>
                   <VBox>
@@ -63,11 +59,47 @@
                   </VBox>
               </items>
             </SplitPane>
-            <HBox spacing="5.0" VBox.vgrow="NEVER">
+            <HBox fx:id="_mediaControls" spacing="5.0" VBox.vgrow="NEVER">
                <children>
-                  <Button fx:id="_skipBackButton" mnemonicParsing="false" text="Skip Back" />
-                  <Button fx:id="_playPauseButton" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Play/Pause" />
-                  <Button fx:id="_skipForwardButton" layoutX="62.0" layoutY="10.0" mnemonicParsing="false" text="Skip Forward" />
+                  <Button layoutX="75.0" layoutY="15.0" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#skipBack" prefHeight="25.0" prefWidth="25.0" style="-fx-background-radius: 12.5;">
+                     <graphic>
+                        <ImageView fx:id="_skipBackButton" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../resources/icons/first-track-icon.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#play" prefHeight="25.0" prefWidth="25.0" style="-fx-background-radius: 12.5;">
+                     <graphic>
+                        <ImageView fx:id="_playButton" fitHeight="25.0" fitWidth="25.0" onMouseClicked="#play" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../resources/icons/play-icon.png" />
+                           </image>
+                           <viewport>
+                              <Rectangle2D />
+                           </viewport>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#pause" prefHeight="25.0" prefWidth="25.0" style="-fx-background-radius: 12.5;">
+                     <graphic>
+                        <ImageView fx:id="_pauseButton" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../resources/icons/pause-icon.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button layoutX="135.0" layoutY="15.0" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#skipForward" prefHeight="25.0" prefWidth="25.0" style="-fx-background-radius: 12.5;">
+                     <graphic>
+                        <ImageView fx:id="_skipForwardButton" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../resources/icons/last-track-icon.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
