--- a/VIDEVOX/src/main/java/nz/ac/auckland/view/TTSView.fxml
+++ b/VIDEVOX/src/main/java/nz/ac/auckland/view/TTSView.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-
 <VBox spacing="10.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.view.TTSViewController">
    <children>
       <HBox spacing="10.0">
@@ -23,15 +22,15 @@
                   <Region VBox.vgrow="ALWAYS" />
                </children>
             </VBox>
-            <TextField fx:id="_nameField" prefWidth="182.0" promptText="Type a unique name for this clip." HBox.hgrow="ALWAYS" />
+            <TextField fx:id="_nameField" prefWidth="173.0" promptText="Type a unique name for this clip." HBox.hgrow="ALWAYS" />
             <VBox>
                <children>
                   <Region VBox.vgrow="ALWAYS" />
-                  <Label text="Start Offset:" />
+                  <Label text="Start Offset (seconds):" />
                   <Region layoutX="10.0" layoutY="10.0" VBox.vgrow="ALWAYS" />
                </children>
             </VBox>
-            <TextField fx:id="_offset" onAction="#validateTime" onKeyTyped="#validateTime" prefWidth="90.0" promptText="00.00 seconds" />
+            <TextField fx:id="_offset" onAction="#validateTime" onKeyTyped="#validateTime" prefWidth="45.0" promptText="00.00" />
          </children>
          <VBox.margin>
             <Insets left="5.0" right="5.0" />
@@ -74,7 +73,7 @@
                   </Button>
                </children>
             </HBox>
-            <Button cancelButton="true" mnemonicParsing="false" onAction="#cancel" text="Cancel">
+            <Button fx:id="_cancelButton" cancelButton="true" mnemonicParsing="false" onAction="#cancel" text="Cancel">
                <tooltip>
                   <Tooltip text="Cancel Text-to-Speech" />
                </tooltip>
