--- a/VIDEVOX/src/main/java/nz/ac/auckland/view/TTSView.fxml
+++ b/VIDEVOX/src/main/java/nz/ac/auckland/view/TTSView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<VBox spacing="10.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.view.TTSViewController">
+<VBox fx:id="_container" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.view.TTSViewController">
    <children>
       <HBox spacing="10.0">
          <children>
@@ -30,7 +30,7 @@
                   <Region layoutX="10.0" layoutY="10.0" VBox.vgrow="ALWAYS" />
                </children>
             </VBox>
-            <TextField fx:id="_offset" onAction="#validateTime" onKeyTyped="#validateTime" prefWidth="45.0" promptText="00.00" />
+            <TextField fx:id="_offset" prefWidth="45.0" promptText="00.00" text="00.00" />
          </children>
          <VBox.margin>
             <Insets left="5.0" right="5.0" />
