--- a/VIDEVOX/src/main/java/nz/ac/auckland/view/RootLayout.fxml
+++ b/VIDEVOX/src/main/java/nz/ac/auckland/view/RootLayout.fxml
@@ -17,8 +17,8 @@
       					<items>
                         <MenuItem mnemonicParsing="false" text="New Project" />
                         <MenuItem mnemonicParsing="false" text="Open Project" />
-                        <MenuItem mnemonicParsing="false" text="Save Project" />
-                        <MenuItem mnemonicParsing="false" text="Save Project As..." />
+                        <MenuItem mnemonicParsing="false" onAction="#save" text="Save Project" />
+                        <MenuItem mnemonicParsing="false" onAction="#saveAs" text="Save Project As..." />
       						<MenuItem mnemonicParsing="false" onAction="#selectVideo" text="Select Video" />
       						<MenuItem mnemonicParsing="false" onAction="#close" text="Close" />
       					</items>
