--- a/VIDEVOX/src/main/java/nz/ac/auckland/view/RootLayout.fxml
+++ b/VIDEVOX/src/main/java/nz/ac/auckland/view/RootLayout.fxml
@@ -15,8 +15,8 @@
       			<menus>
       				<Menu mnemonicParsing="false" text="File">
       					<items>
-                        <MenuItem mnemonicParsing="false" text="New Project" />
-                        <MenuItem mnemonicParsing="false" text="Open Project" />
+                        <MenuItem mnemonicParsing="false" onAction="#newProject" text="New Project" />
+                        <MenuItem mnemonicParsing="false" onAction="#open" text="Open Project" />
                         <MenuItem mnemonicParsing="false" onAction="#save" text="Save Project" />
                         <MenuItem mnemonicParsing="false" onAction="#saveAs" text="Save Project As..." />
       						<MenuItem mnemonicParsing="false" onAction="#selectVideo" text="Select Video" />
