--- a/VIDEVOX/src/main/java/nz/ac/auckland/view/AuduoListBox.fxml
+++ b/VIDEVOX/src/main/java/nz/ac/auckland/view/AuduoListBox.fxml
@@ -6,23 +6,23 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<VBox maxHeight="200.0" maxWidth="-Infinity" minHeight="100.0" minWidth="200.0" prefHeight="100.0" prefWidth="200.0" spacing="5.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.view.AudioListBoxController">
+<VBox maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="250.0" spacing="5.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.view.AudioListBoxController">
 	<children>
 		<HBox>
 			<children>
 				<Region HBox.hgrow="ALWAYS" />
-				<Label fx:id="nameLabel" text="Audio Name" />
+				<Label fx:id="_playableName" text="Audio Name" />
 				<Region HBox.hgrow="ALWAYS" />
 			</children>
 		</HBox>
 		<Region VBox.vgrow="ALWAYS" />
 		<HBox spacing="10.0">
 			<children>
-				<Label prefHeight="17.0" prefWidth="56.0" text="Volume:" HBox.hgrow="ALWAYS" />
+				<Label text="Volume:" HBox.hgrow="NEVER" />
 				<VBox HBox.hgrow="ALWAYS">
 					<children>
 						<Region VBox.vgrow="ALWAYS" />
-						<Slider fx:id="volSlider" />
+						<Slider fx:id="_volSlider" />
 						<Region VBox.vgrow="ALWAYS" />
 					</children>
 				</VBox>
@@ -34,7 +34,7 @@
 				<VBox>
 					<children>
 						<Region VBox.vgrow="ALWAYS" />
-						<CheckBox fx:id="activeBox" mnemonicParsing="false" text="Active" />
+						<CheckBox fx:id="_activeBox" mnemonicParsing="false" text="Active" VBox.vgrow="NEVER" />
 						<Region VBox.vgrow="ALWAYS" />
 					</children>
 				</VBox>
@@ -42,11 +42,11 @@
 				<VBox layoutX="10.0" layoutY="10.0">
 					<children>
 						<Region VBox.vgrow="ALWAYS" />
-						<Label text="Start Offset " />
+						<Label text="Start Offset " VBox.vgrow="NEVER" />
 						<Region VBox.vgrow="ALWAYS" />
 					</children>
 				</VBox>
-				<TextField fx:id="offsetField" prefWidth="50.0" promptText="00.00" HBox.hgrow="NEVER" />
+				<TextField fx:id="_startOffset" prefWidth="60.0" promptText="00.00" HBox.hgrow="NEVER" />
 			</children>
 		</HBox>
 	</children>
