--- a/VIDEVOX/src/main/java/nz/ac/auckland/view/AudioListBox.fxml
+++ b/VIDEVOX/src/main/java/nz/ac/auckland/view/AudioListBox.fxml
@@ -8,6 +8,7 @@
 
 <VBox maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="250.0" spacing="5.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.view.AudioListBoxController">
 	<children>
+      <Region prefHeight="2.0" style="-fx-background-color: black;" VBox.vgrow="NEVER" />
 		<HBox>
 			<children>
 				<Region HBox.hgrow="ALWAYS" />
@@ -27,6 +28,9 @@
 					</children>
 				</VBox>
 			</children>
+         <VBox.margin>
+            <Insets left="5.0" right="5.0" />
+         </VBox.margin>
 		</HBox>
 		<Region layoutX="15.0" layoutY="37.0" VBox.vgrow="ALWAYS" />
 		<HBox>
@@ -48,9 +52,10 @@
 				</VBox>
 				<TextField fx:id="_startOffset" prefWidth="60.0" promptText="00.00" HBox.hgrow="NEVER" />
 			</children>
+         <VBox.margin>
+            <Insets left="5.0" right="5.0" />
+         </VBox.margin>
 		</HBox>
+      <Region layoutX="15.0" layoutY="98.0" prefHeight="2.0" style="-fx-background-color: black;" VBox.vgrow="NEVER" />
 	</children>
-	<padding>
-		<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-	</padding>
 </VBox>
